working a good bit, gdpr issues, some admin issues as well

--- a/admin/templates/base_admin.html
+++ b/admin/templates/base_admin.html
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="{{ url_for('index') }}">
                     <i class="bi bi-house"></i> Main App
                 </a>
-                <a class="nav-link" href="{{ url_for('logout') }}">
+                <a class="nav-link" href="{{ url_for('logout_all') }}">
                     <i class="bi bi-box-arrow-right"></i> Logout
                 </a>
             </div>
