--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
                         </div>
 
                         <!-- Login Form -->
-                        <form method="POST" action="{{ url_for('login') }}">
+                        <form method="POST" action="{{ url_for('user_management.login') }}">
                             {{ form.hidden_tag() }}
                             
                             <div class="mb-4">
