--- a/admin/templates/components/admin_navigation.html
+++ b/admin/templates/components/admin_navigation.html
@@ -67,7 +67,7 @@
         <h3 class="nav-section-title">Content Management</h3>
         <ul class="nav-list">
             <li class="nav-item">
-                <a href="{{ url_for('review') }}" class="nav-link {{ 'active' if request.endpoint == 'review' }}">
+                <a href="{{ url_for('review_list') }}" class="nav-link {{ 'active' if request.endpoint == 'review_list' }}">
                     <i class="icon-review" aria-hidden="true"></i>
                     <span>All Content Review</span>
                     {% if total_pending_review > 0 %}
