--- a/templates/components/viewer_navigation.html
+++ b/templates/components/viewer_navigation.html
@@ -16,7 +16,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="{{ url_for('review') }}" class="nav-link {{ 'active' if request.endpoint == 'review' }}">
+                <a href="{{ url_for('review_list') }}" class="nav-link {{ 'active' if request.endpoint == 'review_list' }}">
                     <i class="icon-review" aria-hidden="true"></i>
                     <span>Review Images</span>
                     {% if pending_review_count > 0 %}
