--- a/templates/errors/401.html
+++ b/templates/errors/401.html
@@ -25,7 +25,7 @@
         <div class="error-description">
             You need to be authenticated to access this resource.
         </div>
-        <a href="{{ url_for('login') }}" class="back-link">Login</a>
+        <a href="{{ url_for('user_management.login') }}" class="back-link">Login</a>
         <a href="{{ url_for('index') }}" class="back-link">← Return to Home</a>
     </div>
 </body>
