--- a/templates/user_management/register.html
+++ b/templates/user_management/register.html
@@ -139,7 +139,7 @@
                                 {% endif %}
                             </div>
                             <div class="form-text">
-                                Required for account creation. See our <a href="#" class="text-decoration-none">Privacy Policy</a> for details.
+                                Required for account creation. See our <a href="{{ url_for('gdpr.privacy_policy') }}" class="text-decoration-none" target="_blank">Privacy Policy</a> for details.
                             </div>
                         </div>
 
